--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ body {
 <button onclick = 'encode()'>Encode</button><br><br><br>
 <label id = 'sb'></label><br>
 <label id = 'code'></label>
-<script src = "/Morse-Encoder.js"></script>
+<script src = "Morse-Encoder.js"></script>
 <div>
 </body>
 </html>
