--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ body {
 }
 </style>
 <body>
+	<nav><a href = next.html>NEXT</a></nav>
 <div class = 'center'>
 <p><strong>Type a number, letter, word or phrase.</strong></p>
 <input type = 'text' id = 'nlw' require pattern = [A-Za-z]*[0-9]*[ ]>
